--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/cms.js",
   "scripts": {
     "start": "webpack-dev-server -d --config webpack.dev.js",
+    "fs": "nodemon --watch src/backends/file-system/ws/ws.js src/backends/file-system/ws/ws.js --",
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "NODE_ENV=production webpack --config webpack.prod.js",
@@ -94,9 +95,14 @@
     "@kadira/storybook": "^1.36.0",
     "autoprefixer": "^6.3.3",
     "babel-plugin-transform-builtin-extend": "^1.1.0",
+    "body-parser": "^1.17.1",
     "classnames": "^2.2.5",
     "dateformat": "^1.0.12",
     "deep-equal": "^1.0.1",
+    "express": "^4.14.0",
+    "express-basic-auth": "^1.0.2",
+    "express-promise": "^0.4.0",
+    "fs-promise": "^2.0.2",
     "fuzzy": "^0.1.1",
     "history": "^2.1.2",
     "immutability-helper": "^2.0.0",
